--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@radix-ui/react-accordion": "^1.2.3",
     "@splinetool/react-spline": "^4.0.0",
     "@tabler/icons-react": "^3.31.0",
+    "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.11.0",
+    "framer-motion": "^12.19.2",
     "lucide-react": "^0.484.0",
     "motion": "^12.6.2",
     "next": "15.2.4",
