--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "lucide-react": "^0.484.0",
     "motion": "^12.6.2",
     "next": "15.2.4",
+    "nodemailer": "^7.0.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.0.2",
